# reactos-deprecated-gitsvn-dont-use

./: README.md
reactos/boot/bootdata/: hivesys.inf
reactos/boot/freeldr/freeldr/ntldr/: setupldr.c
reactos/drivers/hid/hidclass/: fdo.c  hidclass.c  pdo.c  precomp.h
reactos/drivers/hid/hidusb/: hidusb.c  hidusb.h  hidusb.rc
reactos/drivers/hid/kbdhid/: kbdhid.c
reactos/drivers/hid/mouhid/: mouhid.c
reactos/drivers/storage/class/: CMakeLists.txt
reactos/drivers/storage/class/cdrom_new/: CMakeLists.txt  cdrom.c
reactos/drivers/storage/class/disk_new/: CMakeLists.txt
reactos/drivers/storage/classpnp/: autorun.c  class.c  lock.c  xferpkt.c
reactos/drivers/storage/ide/: CMakeLists.txt  ahci.h  bmaster.h  sata.h
reactos/drivers/storage/ide/ahcix/: CMakeLists.txt  ahcix.c  ahcix.h  ahcix.rc  ahcix_reg.inf  ahcixfdo.c  ahcixpdo.c
reactos/drivers/storage/ide/atax/: CMakeLists.txt  atax.c  atax.h  atax.rc  atax_reg.inf  ataxfdo.c  ataxinit.c  ataxpdo.c
reactos/drivers/storage/ide/pciide/: CMakeLists.txt  pciide.c  pciide_reg.inf
reactos/drivers/storage/ide/pciidex/: CMakeLists.txt  dma.c  fdo.c  miniport.c  pciidex.h  pdo.c
reactos/drivers/usb/: CMakeLists.txt
reactos/drivers/usb/usbccgp/: pdo.c
reactos/drivers/usb/usbstor/: descriptor.c  disk.c  error.c  fdo.c  misc.c  pdo.c  scsi.c  usbstor.c  usbstor.h  usbstor.rc
reactos/hal/halx86/generic/: dma.c
reactos/ntoskrnl/io/pnpmgr/: pnpmgr.c
reactos/sdk/lib/drivers/hidparser/: api.c  hidparser.c  parser.h
